--- a/public/landing/css/style.css
+++ b/public/landing/css/style.css
@@ -232,7 +232,7 @@
         border-bottom: 1px solid rgba(255, 255, 255, .1);
         z-index: 999;
     }
-    
+
     .sticky-top.navbar-light {
         position: fixed;
         background: var(--bs-light);
@@ -486,6 +486,8 @@
     background: var(--bs-white);
     box-shadow: inset 0 0 45px rgba(0, 0, 0, .1);
     transition: 0.5s;
+    max-height: 450px !important;
+
 }
 
 .blog .blog-item a {
@@ -636,7 +638,7 @@
 }
 
 .team .team-item .team-img {
-    width: 100%; 
+    width: 100%;
     height: 100%;
     border-radius: 100%;
     position: relative;
@@ -725,7 +727,7 @@
 }
 
 .testimonial .testimonial-item .testimonial-img img {
-    width: 100px; 
+    width: 100px;
     height: 100px;
     border-radius: 100px;
     border: 5px solid var(--bs-light);
@@ -745,7 +747,7 @@
 
 .testimonial .testimonial-item  .testimonial-quote-left {
     position: absolute;
-    width: 60px; 
+    width: 60px;
     height: 60px;
     top: 20px;
     left: 25px;
@@ -759,7 +761,7 @@
 
 .testimonial .testimonial-item  .testimonial-quote-right {
     position: absolute;
-    width: 60px; 
+    width: 60px;
     height: 60px;
     bottom: -30px;
     right: 25px;
